tweak npc, start pc

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -59,7 +59,6 @@ input {
       background-color: #d2d1cd;
       color: #1c1c1c; }
     input[type='text']:placeholder-shown, input[type='number']:placeholder-shown {
-      border: 1px dotted #FCD116;
       background-color: rgba(28, 28, 28, 0.14902);
       color: white; }
   input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
@@ -170,8 +169,7 @@ input:checked + .sheet-slider:before {
   font-weight: bolder;
   text-transform: capitalize;
   padding: 5px; }
-  .sheet-tabs button[type='action'].sheet-pictos, .sheet-tabs .sheet-cc-row button[type='action'][name*='shots'], .sheet-cc-row .sheet-tabs button[type='action'][name*='shots'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_reload'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_reload'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_primary_ammo'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_primary_ammo'], .sheet-tabs button[type='action'].sheet-armor-buttons,
-  .sheet-tabs button[type='action'].sheet-roll-toggles, .sheet-tabs .repcontrol button[type='action'].repcontrol_edit:after, .repcontrol .sheet-tabs button[type='action'].repcontrol_edit:after,
+  .sheet-tabs button[type='action'].sheet-pictos, .sheet-tabs .sheet-cc-row button[type='action'][name*='shots'], .sheet-cc-row .sheet-tabs button[type='action'][name*='shots'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_reload'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_reload'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_primary_ammo'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_primary_ammo'], .sheet-tabs .repcontrol button[type='action'].repcontrol_edit:after, .repcontrol .sheet-tabs button[type='action'].repcontrol_edit:after,
   .sheet-tabs .repcontrol button[type='action'].repcontrol_add:after,
   .repcontrol .sheet-tabs button[type='action'].repcontrol_add:after, .sheet-tabs .itemcontrol button[type='action'].repcontrol_del, .itemcontrol .sheet-tabs button[type='action'].repcontrol_del {
     text-transform: lowercase; }
@@ -202,12 +200,6 @@ input:checked + .sheet-slider:before {
   text-align: center;
   width: 20px; }
 
-.sheet-toggle input[type='checkbox']:hover + span,
-.sheet-toggle input[type='radio']:hover + span,
-.sheet-toggle input[type='checkbox']:checked + span,
-.sheet-toggle input[type='radio']:checked + span {
-  color: #FCD116; }
-
 .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice'], .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice'], .sheet-npc div.sheet-end div.sheet-forms span[name='attr_form_dice'], .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice'] {
   vertical-align: middle; }
   .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:before, .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice']:before, .sheet-npc div.sheet-end div.sheet-forms span[name='attr_form_dice']:before, .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice']:before {
@@ -220,9 +212,12 @@ input.sheet-toggle {
   position: absolute;
   opacity: 0;
   z-index: 2; }
-  .sheet-npc div.sheet-repeating input[name='attr_flag']:checked + span,
-  input.sheet-toggle:checked + span {
-    color: #FCD116; }
+
+.sheet-pc input[type='checkbox'],
+.sheet-pc input[type='radio'] {
+  position: relative;
+  opacity: 0;
+  z-index: 2; }
 
 .sheet-npc div.sheet-repeating input[name='attr_flag'] + span {
   opacity: 0; }
@@ -333,6 +328,12 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       grid-area: 3 / 2 / 3 / 3; }
     .sheet-pc .sheet-tabs label[data-i18n-title='edge'] {
       grid-area: 3 / 4 / 3 / 5; }
+  .sheet-pc input[type='checkbox'] + span,
+  .sheet-pc input[type='radio'] + span {
+    font-family: 'pictos'; }
+  .sheet-pc input[type='checkbox']:checked + span,
+  .sheet-pc input[type='radio']:checked + span {
+    color: #610b0d; }
 
 /***** PC ROWS & COLUMNS SETTINGS *****/
 .sheet-pc-row {
@@ -474,25 +475,16 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   margin-right: -5%; }
 
 /***** PRIMARY ARMOR *****/
-.sheet-cc-arm button[type='roll'] {
-  padding: 2px 3px;
-  margin-left: 0px; }
-  .sheet-cc-arm button[type='roll']:nth-of-type(2) {
-    margin-right: 0px; }
-
 .sheet-armor-buttons {
   display: inline-block;
   font-size: 1.2em;
   line-height: 20px;
   margin-left: 1%;
-  width: 28%; }
+  width: 30%; }
   .sheet-armor-buttons button[type='roll'] {
-    font-size: 1.3em;
-    margin-right: -5px;
-    width: 15%; }
+    margin-right: -5px; }
   .sheet-armor-buttons span {
-    font-size: 1.2em;
-    margin-left: -5px; }
+    font-size: 1em; }
 
 /***** PRIMARY WEAPON *****/
 .sheet-cc-row {
@@ -560,20 +552,21 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     font-weight: bold; }
   .sheet-attr-col input[type='number'] {
     border-radius: 0px;
-    width: 23%; }
+    width: 23%;
+    font-weight: bold; }
   .sheet-attr-col input[type='text'] {
     width: 50%; }
   .sheet-attr-col .sheet-totals {
     padding: 0px 2px; }
   .sheet-attr-col-left {
-    margin-left: -5%; }
+    margin-left: -7%; }
   .sheet-attr-col-right {
     width: 50%; }
     .sheet-attr-col-right button[type='roll'] {
       margin-right: 0px;
       width: 55%; }
     .sheet-attr-col-right .sheet-attr-ini input[type='number'] {
-      width: 15%; }
+      width: 17%; }
     .sheet-attr-col-right label {
       border-bottom: 1px solid #000;
       font-size: 0.9em;
@@ -602,9 +595,8 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   height: 22px;
   margin-bottom: 4px;
   vertical-align: top;
-  width: 65%; }
-  .sheet-attr-und .sheet-display {
-    text-align: center; }
+  width: 65%;
+  text-align: center; }
 
 .sheet-tiny-span {
   font-size: 0.75em; }
@@ -629,28 +621,33 @@ div.sheet-matrix-device .sheet-matrixFirewall {
 /***** ATTRIBUTE AND CONDITION MONITOR SETTINGS TOGGLES *****/
 /***** ATTRIBUTE SETTINGS TOGGLE *****/
 .sheet-attr-box input.sheet-settings-toggle {
-  left: 94%;
-  top: 0px; }
+  left: 98%; }
   .sheet-attr-box input.sheet-settings-toggle + span {
     font-size: 1em;
-    left: 88%; }
+    left: 94%;
+    top: 0px;
+    position: relative; }
 
 /***** CONDITION SETTINGS TOGGLE  *****/
 .sheet-condition-box input[type='checkbox'] {
   left: -1%; }
   .sheet-condition-box input[type='checkbox'] + span {
-    left: -10%; }
+    left: -4%;
+    position: relative; }
 
 /***** CONDITION MONITOR SECTION *****/
 .sheet-con-track {
   display: inline-block;
   vertical-align: top;
-  width: 47%; }
+  width: 47%;
+  margin-top: 2%;
+  margin-bottom: 3%; }
   .sheet-con-track button[type='action'] {
     font-size: 1em;
     font-weight: bold;
-    margin-bottom: -5px;
-    padding-left: 20px;
+    text-align: center;
+    padding: 1% 2%;
+    margin-left: 7%;
     width: 100%; }
 
 /***** CONDITION MONITOR SETTINGS  *****/
@@ -1324,6 +1321,10 @@ input.sheet-skill-select {
 /***** CYBERDECK *****/
 .sheet-cyberdeck button {
   font-weight: bold; }
+  .sheet-cyberdeck button input[name="attr_flag"] {
+    position: absolute; }
+    .sheet-cyberdeck button input[name="attr_flag"] + span {
+      position: absolute; }
 
 .sheet-cyberdeck h3 {
   line-height: 20px; }
@@ -1363,6 +1364,8 @@ input.sheet-skill-select {
 /**** MATRIX BUBBLES ****/
 .sheet-pc .sheet-device-attr {
   display: inline; }
+  .sheet-pc .sheet-device-attr span {
+    position: relative; }
 
 .sheet-matrix-tot {
   display: inline-block;
@@ -1457,7 +1460,7 @@ input.sheet-skill-select {
   width: 95%; }
 
 .sheet-program-box .sheet-program-toggle {
-  position: absolute; }
+  position: absolute !important; }
 
 .sheet-program-box .sheet-program-toggle:checked span,
 .sheet-program-box .sheet-program-toggle:checked ~ .sheet-display-row,
@@ -1609,13 +1612,24 @@ input.sheet-skill-select {
 .sheet-con-hex {
   position: relative;
   top: -60px; }
+  .sheet-edg-hex .sheet-edg-hex input[type='checkbox'],
+  .sheet-edg-hex .sheet-con-hex input[type='radio'],
+  .sheet-con-hex .sheet-edg-hex input[type='checkbox'],
+  .sheet-con-hex .sheet-con-hex input[type='radio'] {
+    height: 20px;
+    margin-right: -21px;
+    top: -9px;
+    width: 20px; }
 
 .sheet-edg-hex input[type='checkbox'],
 .sheet-con-hex input[type='radio'] {
   height: 20px;
   margin-right: -21px;
   top: -9px;
-  width: 20px; }
+  width: 20px;
+  opacity: 0;
+  z-index: 2;
+  position: relative; }
 
 .sheet-hexagon {
   display: inline-block;
@@ -1823,10 +1837,6 @@ span.sheet-program-toggle {
 .sheet-category[value='Combat'] ~ .sheet-combat-type-hide {
   display: inline; }
 
-.sheet-magic-skill,
-.sheet-resonance-skill {
-  opacity: 0.15; }
-
 .sheet-character-type[value='magic'] + .sheet-magic-skill,
 .sheet-character-type[value='magic'] + .sheet-magic-skill + .sheet-magic-skill,
 .sheet-character-type[value='resonance'] + .sheet-resonance-skill {
@@ -1838,28 +1848,6 @@ span.sheet-program-toggle {
 .sheet-character-type[value='resonance'] ~ .sheet-resonance + .sheet-resonance {
   display: inline-block;
   width: 100%; }
-
-/*:+:+:+: NPC ARMOR BUTTONS :+:+:+:*/
-.sheet-armor-buttons,
-.sheet-armor-buttons span,
-.sheet-roll-toggles,
-.sheet-roll-toggles span {
-  position: relative; }
-
-.sheet-armor-buttons,
-.sheet-armor-buttons span {
-  font-size: 1em;
-  padding: 0px; }
-
-.sheet-roll-toggles,
-.sheet-roll-toggles span {
-  display: inline;
-  font-size: 1.5em;
-  margin-bottom: 5px; }
-
-.sheet-roll-toggles input {
-  height: 20px;
-  width: 20px; }
 
 span.sheet-pictosC {
   font-family: 'Pictos Custom'; }
@@ -1905,6 +1893,10 @@ span.sheet-d6 {
     font-size: 0.85em; }
   .sheet-npc input[type='radio'] {
     opacity: 1; }
+  .sheet-npc input[type='text']:placeholder-shown, .sheet-npc input[type='number']:placeholder-shown {
+    border: 1px dotted #FCD116; }
+  .sheet-npc input.sheet-toggle:checked + span {
+    color: #FCD116; }
   .sheet-npc textarea, .sheet-npc select {
     color: #fff;
     background-color: #555; }
@@ -1928,12 +1920,6 @@ span.sheet-d6 {
     .sheet-npc div.sheet-tabs .sheet-settings-toggle input[type='checkbox'][name='attr_stats_toggle'] + span,
     .sheet-settings-toggle .sheet-npc div.sheet-tabs input[type='checkbox'][name='attr_stats_toggle'] + span,
     .sheet-npc div.sheet-tabs .sheet-flag-primary + div > input[name='attr_stats_toggle'] + span,
-    .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span.sheet-armor-buttons,
-    .sheet-npc div.sheet-tabs .sheet-armor-buttons input[name='attr_stats_toggle'] + span,
-    .sheet-armor-buttons .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span,
-    .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span.sheet-roll-toggles,
-    .sheet-npc div.sheet-tabs .sheet-roll-toggles input[name='attr_stats_toggle'] + span,
-    .sheet-roll-toggles .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span,
     .sheet-npc div.sheet-tabs .repcontrol input[name='attr_stats_toggle'] + span.repcontrol_edit:after,
     .repcontrol .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span.repcontrol_edit:after,
     .sheet-npc div.sheet-tabs .repcontrol input[name='attr_stats_toggle'] + span.repcontrol_add:after,
@@ -1946,12 +1932,7 @@ span.sheet-d6 {
       height: 100%; }
     .sheet-npc div.sheet-tabs input[name='attr_stats_toggle']:checked + span {
       color: #FCD116; }
-    .sheet-npc div.sheet-tabs span.sheet-pictos, .sheet-npc div.sheet-tabs .sheet-settings-toggle input[type='checkbox'] + span, .sheet-settings-toggle .sheet-npc div.sheet-tabs input[type='checkbox'] + span, .sheet-npc div.sheet-tabs .sheet-flag-primary + div > span, .sheet-npc div.sheet-tabs span.sheet-armor-buttons,
-    .sheet-npc div.sheet-tabs .sheet-armor-buttons span,
-    .sheet-armor-buttons .sheet-npc div.sheet-tabs span,
-    .sheet-npc div.sheet-tabs span.sheet-roll-toggles,
-    .sheet-npc div.sheet-tabs .sheet-roll-toggles span,
-    .sheet-roll-toggles .sheet-npc div.sheet-tabs span, .sheet-npc div.sheet-tabs .repcontrol span.repcontrol_edit:after, .repcontrol .sheet-npc div.sheet-tabs span.repcontrol_edit:after,
+    .sheet-npc div.sheet-tabs span.sheet-pictos, .sheet-npc div.sheet-tabs .sheet-settings-toggle input[type='checkbox'] + span, .sheet-settings-toggle .sheet-npc div.sheet-tabs input[type='checkbox'] + span, .sheet-npc div.sheet-tabs .sheet-flag-primary + div > span, .sheet-npc div.sheet-tabs .repcontrol span.repcontrol_edit:after, .repcontrol .sheet-npc div.sheet-tabs span.repcontrol_edit:after,
     .sheet-npc div.sheet-tabs .repcontrol span.repcontrol_add:after,
     .repcontrol .sheet-npc div.sheet-tabs span.repcontrol_add:after, .sheet-npc div.sheet-tabs .itemcontrol span.repcontrol_del, .itemcontrol .sheet-npc div.sheet-tabs span.repcontrol_del {
       text-align: center;
@@ -1996,8 +1977,9 @@ span.sheet-d6 {
   .sheet-npc div.sheet-attribute {
     border-bottom: 1px solid #fff;
     border-top: 1px solid #fff;
-    margin: 2% 0px 1% 0px;
-    padding: 1%;
+    grid-row-gap: 5%;
+    margin: 2% 0px;
+    padding: 1% 1% 3% 1%;
     width: 100%; }
     .sheet-npc div.sheet-attribute input[type='number'] {
       text-align: center;
@@ -2066,7 +2048,8 @@ span.sheet-d6 {
       .sheet-npc div.sheet-end div.sheet-inline-repeating div.repcontainer .repcontrol {
         display: inline-block;
         vertical-align: top;
-        margin-bottom: 0px; }
+        margin-bottom: 1%;
+        margin-right: 1%; }
     .sheet-npc div.sheet-end div.sheet-inline-repeating div.sheet-settings {
       grid-template-columns: 2fr 8em 8em 1fr 1fr;
       grid-column-gap: 1%;
@@ -2083,19 +2066,27 @@ span.sheet-d6 {
       grid-column-gap: 0.2%; }
       .sheet-npc div.sheet-end div.sheet-weapons div.sheet-settings label[data-i18n-title='notes'] {
         grid-column: 1 / 12; }
+    .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice'] {
+      margin-left: 3%; }
     .sheet-npc div.sheet-end div.sheet-spells div.sheet-settings {
       grid-column-gap: 0.2%;
       grid-template-columns: 7em 3em 1fr 5em 5em 5em 3em 5em 3em; }
+    .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice'] {
+      margin-left: 3%; }
     .sheet-npc div.sheet-end div.sheet-spells label[data-i18n-title='notes'] {
       grid-column: 1 / 10; }
     .sheet-npc div.sheet-end div.sheet-forms div.sheet-settings {
       grid-column-gap: 0.2%;
       grid-template-columns: 3em 1fr 7em 8em 3em; }
+    .sheet-npc div.sheet-end div.sheet-forms span[name='attr_form_dice'] {
+      margin-left: 3%; }
     .sheet-npc div.sheet-end div.sheet-forms label[data-i18n-title='notes'] {
       grid-column: 1 / 6; }
     .sheet-npc div.sheet-end div.sheet-ic div.sheet-settings {
       grid-column-gap: 0.2%;
       grid-template-columns: 1fr 8em 8em 8em; }
+    .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice'] {
+      margin-left: 3%; }
     .sheet-npc div.sheet-end div.sheet-ic label[data-i18n-title='notes'] {
       grid-column: 1 / 6; }
   .sheet-npc div.sheet-matrix {
@@ -2144,6 +2135,15 @@ span.sheet-d6 {
         grid-row: 4; }
       .sheet-npc div.sheet-matrix-device div.repcontainer input.sheet-toggle {
         top: 3%; }
+      .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem {
+        display: inline-block;
+        width: 100%; }
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input[name="attr_program_on"] {
+          left: 2%; }
+          .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input[name="attr_program_on"] + span {
+            left: 2.5%; }
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem button {
+          margin-left: 5%; }
 
 /********************************************************************************************************/
 /********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
@@ -2197,14 +2197,9 @@ input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam']
   display: inline; }
 
 .sheet-pc .sheet-tabs, div.sheet-skill-box div.sheet-row-long, .sheet-npc div.sheet-tabs, .sheet-npc div.sheet-mid, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-attribute.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-attribute.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-attribute.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-attribute.sheet-vehicle {
-  display: inline-grid;
-  grid-column-gap: 1%;
-  grid-row-gap: 1%; }
+  display: inline-grid; }
 
-.sheet-pictos, .sheet-settings-toggle input[type='checkbox'] + span, .sheet-flag-primary + div > span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .sheet-armor-buttons,
-.sheet-armor-buttons span,
-.sheet-roll-toggles,
-.sheet-roll-toggles span, .repcontrol .repcontrol_edit:after,
+.sheet-pictos, .sheet-settings-toggle input[type='checkbox'] + span, .sheet-flag-primary + div > span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .repcontrol .repcontrol_edit:after,
 .repcontrol .repcontrol_add:after, .itemcontrol .repcontrol_del {
   font-family: 'Pictos'; }
 
