--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -79,16 +79,6 @@
   }
 }
 
-.sheet-toggle {
-	input[type='checkbox']:hover + span,
-    input[type='radio']:hover + span,
-    input[type='checkbox']:checked + span,
-    input[type='radio']:checked + span{
-       color: #FCD116;
-     }
- } 
-
-
 %parantheseNumbers {
 	vertical-align: middle;
 
@@ -101,7 +91,12 @@ input.sheet-toggle {
 	position: absolute;
 	opacity: 0;
 	z-index: 2;
-	&:checked + span { color: $gold; }
+}
+
+%toggleRelative {
+	position: relative;
+	opacity: 0;
+	z-index: 2;
 }
 
 %settingsCheckboxes { 
@@ -144,9 +139,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d;
 		}
 
-		hr {
-			margin: 7px 0px -2px 0px;
-		}
+		hr { margin: 7px 0px -2px 0px; }
 
 		.sheet-tabs {
 			@extend %display-inline-grid;
@@ -215,6 +208,16 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				&[data-i18n-title='edge'] { grid-area: 3 / 4 / 3 / 5;}
 			}
 		}
+
+		input[type='checkbox'],
+		input[type='radio'] {
+			@extend %toggleRelative;
+			
+			& + span { font-family: 'pictos'; }
+			
+			&:checked + span {  color: $red; }
+		}
+
 	}
 	@import 'src/scss/_pc'; 
 
