--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -180,7 +180,7 @@
 	.end.body
 		//- TEXTBOXES
 		each val, key in {'Qualities': 'grunt', 'Augmentations': 'grunt', 'Gear': 'grunt vehicle', 'Programs': 'vehicle', 'Modifications': 'vehicle', 'Powers': 'grunt hide-magic', 'Weakness': 'grunt hide-magic'}
-			- const attrName = key.toLowerCase();
+			- const attrName = key === 'Qualities' ? 'quality' : key.toLowerCase();
 			input(name='attr_'+attrName type='hidden' value='')
 			.textrow(class=val)
 				h1(data-i18n=attrName) key
@@ -211,7 +211,7 @@
 					input(name='attr_display_limit' type='hidden' value=val[2])
 					input(name='attr_display_attribute' type='hidden' value=val[1])
 					input(name='attr_dicepool' type='hidden' value='0')
-					input(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+					input.toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
 					span.pictos x
 					//- SKILL BUTTON
 					+skillButton(false)
@@ -246,7 +246,7 @@
 		.rows.sprite.repeating.inline-repeating
 			h1(data-i18n='skills') skills
 			fieldset(class='repeating_active')
-				input(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+				input.toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
 				span.pictos x
 				//- SKILL BUTTON
 				+spriteButton('skill', 'display')
@@ -259,7 +259,7 @@
 		.rows.sprite.repeating.inline-repeating
 			h1(data-i18n='powers') Powers
 			fieldset(class='repeating_powers')
-				input(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+				input.toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
 				span.pictos x
 				+spriteButton('power', 'power')
 				.settings
