--- a/Shadowrun5thEdition/src/scss/_global.scss
+++ b/Shadowrun5thEdition/src/scss/_global.scss
@@ -54,7 +54,7 @@
 		vertical-align: middle;
 
 		&[type='text'],
-		&[type='number'] {;
+		&[type='number'] {
 			border: 1px dotted $gray;
 			height    : 20px;
 
@@ -64,7 +64,6 @@
 			}
 
 			&:placeholder-shown {
-				border: 1px dotted $gold;
 				background-color: hsla(0, 0%, 11%, 0.14901960784313725);
 				color: white;
 			}
