--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -1,11 +1,7 @@
 	%display-none { display: none; }
 	%display-inline { display: inline; }
 
-	%display-inline-grid { 
-		display: inline-grid;
-		grid-column-gap: 1%;
-		grid-row-gap: 1%;
-	}
+	%display-inline-grid { display: inline-grid; }
 
 	%display-grid { display: grid; }
 
