--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -38,6 +38,7 @@
 		}
 	}
 
+
 	.sheet-row-long {border-bottom: 1px solid #000;}
 	.sheet-settings-row {
 		margin-top: 5px;
@@ -186,34 +187,16 @@
 	}
 
 	/***** PRIMARY ARMOR *****/
-	.sheet-cc-arm {
-		button[type='roll'] {
-			padding    : 2px 3px;
-			margin-left: 0px;
-
-			&:nth-of-type(2) {
-				margin-right: 0px;
-			}
-		}
-	}
-
 	.sheet-armor-buttons {
 		display    : inline-block;
 		font-size  : 1.2em;
 		line-height: 20px;
 		margin-left: 1%;
-		width      : 28%;
+		width      : 30%;
 
-		button[type='roll'] {
-			font-size   : 1.3em;
-			margin-right: -5px;
-			width       : 15%;
-		}
+		button[type='roll'] { margin-right: -5px; }
 
-		span {
-			font-size  : 1.2em;
-			margin-left: -5px;
-		}
+		span { font-size  : 1em; }
 	}
 
 	/***** PRIMARY WEAPON *****/
@@ -296,13 +279,14 @@
 			input[type='number'] {
 				border-radius: 0px;
 				width        : 23%;
+				font-weight: bold;
 			}
 
 			input[type='text'] { width: 50%; }
 
 			.sheet-totals { padding: 0px 2px;}
 
-			&-left { margin-left: -5%; }
+			&-left { margin-left: -7%; }
 
 			&-right { 
 				width: 50%; 
@@ -312,7 +296,7 @@
 					width       : 55%;
 				}
 
-				.sheet-attr-ini input[type='number'] {width: 15%;}
+				.sheet-attr-ini input[type='number'] { width: 17%; }
 
 				label {
 					border-bottom: 1px solid #000;
@@ -322,9 +306,7 @@
 					width        : 55%;
 				}
 
-				.sheet-attr-und {
-					width: 43%;
-				}
+				.sheet-attr-und { width: 43%; }
 			}
 		}
 
@@ -344,8 +326,7 @@
 		margin-bottom : 4px;
 		vertical-align: top;
 		width         : 65%;
-
-		.sheet-display {text-align: center;}
+		text-align: center;
 	}
 
 	.sheet-tiny-span {font-size: 0.75em;}
@@ -372,12 +353,13 @@
 /***** ATTRIBUTE AND CONDITION MONITOR SETTINGS TOGGLES *****/
 	/***** ATTRIBUTE SETTINGS TOGGLE *****/
 		.sheet-attr-box input.sheet-settings-toggle {
-			left: 94%;
-			top : 0px;
+			left: 98%;
 
 			& + span  {
 				font-size: 1em;
-				left     : 88%;
+				left: 94%;
+				top : 0px;
+				position: relative;
 			}
 		}
 
@@ -385,7 +367,10 @@
 		.sheet-condition-box input[type='checkbox'] {
 			left: -1%;
 			
-			& + span { left: -10%; }
+			& + span { 
+				left: -4%; 
+				position: relative;
+			}
 		}
 
 	/***** CONDITION MONITOR SECTION *****/
@@ -393,12 +378,15 @@
 			display       : inline-block;
 			vertical-align: top;
 			width         : 47%;
+			margin-top: 2%;
+			margin-bottom: 3%;
 
 			button[type='action'] {
 				font-size    : 1em;
 				font-weight  : bold;
-				margin-bottom: -5px;
-				padding-left : 20px;
+				text-align: center;
+				padding: 1% 2%;
+				margin-left: 7%;
 				width        : 100%;
 			}
 		}
@@ -1169,7 +1157,17 @@
 			.sheet-con-hex h2 {vertical-align: top;}
 
 		/***** CYBERDECK *****/
-			.sheet-cyberdeck button {font-weight: bold;}
+			.sheet-cyberdeck button {
+				font-weight: bold;
+
+				input[name="attr_flag"] {
+					position: absolute;
+
+					& + span {
+						position: absolute;
+					}
+				}
+			}
 
 			.sheet-cyberdeck h3 {line-height: 20px;}
 				.sheet-cyberdeck h3:nth-of-type(2) {margin-left: 5%;}
@@ -1200,7 +1198,13 @@
 				margin-right: 1%;}
 
 		/**** MATRIX BUBBLES ****/
-			.sheet-pc .sheet-device-attr {display: inline;}
+			.sheet-pc .sheet-device-attr {
+				display: inline;
+
+				span {
+					position: relative;
+				}
+			}
 
 			.sheet-matrix-tot {
 				display: inline-block;
@@ -1307,7 +1311,7 @@
 					width: 95%;}
 
 				.sheet-program-box .sheet-program-toggle {
-					position: absolute;}
+					position: absolute !important;}
 
 				.sheet-program-box .sheet-program-toggle:checked span,
 				.sheet-program-box .sheet-program-toggle:checked ~ .sheet-display-row,
@@ -1458,14 +1462,28 @@
 		.sheet-edg-hex,
 		.sheet-con-hex {
 			position: relative;
-			top     : -60px;}
+			top     : -60px;
+
+			.sheet-edg-hex input[type='checkbox'],
+			.sheet-con-hex input[type='radio'] {
+				height      : 20px;
+				margin-right: -21px;
+				top         : -9px;
+				width       : 20px;
+			}
+
+		}
 
 		.sheet-edg-hex input[type='checkbox'],
 		.sheet-con-hex input[type='radio'] {
 			height      : 20px;
 			margin-right: -21px;
 			top         : -9px;
-			width       : 20px;}
+			width       : 20px;
+			opacity: 0;
+			z-index: 2;
+			position: relative;
+		}
 
 		.sheet-hexagon {
 			display: inline-block;
@@ -1672,10 +1690,6 @@
 
     .sheet-category[value='Combat'] ~ .sheet-combat-type-hide {display: inline;}
 
-    .sheet-magic-skill,
-    .sheet-resonance-skill {
-      opacity: 0.15;}
-
     .sheet-character-type[value='magic'] + .sheet-magic-skill,
     .sheet-character-type[value='magic'] + .sheet-magic-skill + .sheet-magic-skill,
     .sheet-character-type[value='resonance'] + .sheet-resonance-skill {
@@ -1687,33 +1701,6 @@
     .sheet-character-type[value='resonance'] ~ .sheet-resonance + .sheet-resonance {
       display: inline-block;
       width: 100%;} 
-
-  /*:+:+:+: NPC ARMOR BUTTONS :+:+:+:*/
-    .sheet-armor-buttons,
-    .sheet-armor-buttons span,
-    .sheet-roll-toggles,
-    .sheet-roll-toggles span {
-      @extend .sheet-pictos;
-      position: relative;
-    }
-
-    .sheet-armor-buttons,
-    .sheet-armor-buttons span {
-      font-size: 1em;
-      padding: 0px;
-    }
-
-    .sheet-roll-toggles,
-    .sheet-roll-toggles span {
-      display: inline;
-      font-size: 1.5em;
-      margin-bottom: 5px;
-    }
-
-      .sheet-roll-toggles input {
-        height: 20px;
-        width: 20px;
-      }
 
   span.sheet-pictosC {font-family: 'Pictos Custom';}
   span.sheet-pictos3 {font-family: 'Pictos Three';}
