--- a/Shadowrun5thEdition/src/scss/_npc.scss
+++ b/Shadowrun5thEdition/src/scss/_npc.scss
@@ -33,7 +33,16 @@
 
 	h3 { font-size: 0.85em; }
 
-	input[type='radio'] { opacity: 1; }
+	input {
+		&[type='radio'] { opacity: 1; }
+
+		&[type='text']:placeholder-shown,
+		&[type='number']:placeholder-shown {
+			border: 1px dotted $gold;
+		}
+
+		&.sheet-toggle:checked + span { color: $gold; }
+	}
 
 	textarea, select {
 		color           : #fff;
@@ -141,8 +150,9 @@
 	div.sheet-attribute {
 		border-bottom: 1px solid #fff;
 		border-top   : 1px solid #fff;
-		margin       : 2% 0px 1% 0px;
-		padding: 1%;
+		grid-row-gap: 5%;
+		margin       : 2% 0px;
+		padding: 1% 1% 3% 1%;
 		width        : 100%;
 
 		input[type='number'] {
@@ -239,7 +249,8 @@
 				.repcontrol {
 					display       : inline-block;
 					vertical-align: top;
-					margin-bottom : 0px;
+					margin-bottom : 1%;
+					margin-right: 1%;
 				}
 			}
 
@@ -270,7 +281,10 @@
 				label[data-i18n-title='notes'] { grid-column: 1 / 12; }
 			}
 
-			span[name='attr_weapon_dice'] { @extend %parantheseNumbers; }
+			span[name='attr_weapon_dice'] {
+				margin-left: 3%;
+				@extend %parantheseNumbers; 
+			}
 		}
 
 		/*:+:+:+: SPELLS :+:+:+:*/
@@ -280,7 +294,10 @@
 				grid-template-columns: 7em 3em 1fr 5em 5em 5em 3em 5em 3em;
 			}
 
-			span[name='attr_dice'] { @extend %parantheseNumbers; }
+			span[name='attr_dice'] { 
+				margin-left: 3%;
+				@extend %parantheseNumbers; 
+			}
 
 			label[data-i18n-title='notes'] { grid-column: 1 / 10; }
 		}
@@ -292,7 +309,11 @@
 				grid-template-columns: 3em 1fr 7em 8em 3em;
 			}
 
-			span[name='attr_form_dice'] { @extend %parantheseNumbers; }
+			span[name='attr_form_dice'] { 
+				margin-left: 3%;
+				@extend %parantheseNumbers; 
+			}
+
 			label[data-i18n-title='notes'] { grid-column: 1 / 6; }
 		}
 
@@ -303,7 +324,11 @@
 				grid-template-columns: 1fr 8em 8em 8em;
 			}
 
-			span[name='attr_software_dice'] { @extend %parantheseNumbers; }
+			span[name='attr_software_dice'] {
+				margin-left: 3%;
+				@extend %parantheseNumbers; 
+			}
+
 			label[data-i18n-title='notes'] { grid-column: 1 / 6; }
 		}
 	}
@@ -368,7 +393,22 @@
 			h2[data-i18n='notes'] { grid-row: 3; }
 			label[data-i18n-title='notes'] { grid-row: 4; }
 
-			input.sheet-toggle { top: 3%; }
+			input.sheet-toggle { 
+				top: 3%;
+			}
+
+			div.repitem {
+				display: inline-block;
+				width: 100%;
+
+				input[name="attr_program_on"] {
+					left: 2%;
+
+					&  + span { left: 2.5%;}
+				}
+
+				button { margin-left: 5%; }
+			}
 		}
 	}
 } 
