--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -59,8 +59,8 @@
 		width     : 100%;
 	}
 
-	input.sheet-settings-toggle[value='display'] ~ div.sheet-pc div.sheet-display,
-    input.sheet-settings-toggle[value='settings'] ~ div.sheet-pc div.sheet-settings {
+	input.sheet-settings-toggle[value='display'] ~ div.sheet-display,
+    input.sheet-settings-toggle[value='settings'] ~ div.sheet-settings {
       display: inline-block;
     }
 
@@ -129,7 +129,9 @@
 
 	//- HIDE SPECIALIZATION BUTTONS IF THERE IS NO SPECIALIZATION
 	input[name='attr_display_specialization'][value=''] ~ button[name*='specialization'],
-	input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'] {
+	input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'],
+	input[name='attr_display_specialization'][value=''] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'],
+	input[name='attr_display_specialization'][value=' '] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization']  {
 		@extend %display-none;
 	}
 
