--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -19,7 +19,6 @@
 		h2, h3 {
 			display       : inline-block;
 			text-transform: capitalize;
-			margin-right  : 5px;
 		}
 	
 		h2 {
@@ -326,7 +325,8 @@
 		margin-bottom : 4px;
 		vertical-align: top;
 		width         : 65%;
-		text-align: center;
+
+		.sheet-display{ text-align: center; }
 	}
 
 	.sheet-tiny-span {font-size: 0.75em;}
@@ -701,61 +701,6 @@
 	}
 
 	/***** SKILLS *****/
-	div.sheet-skill-box {
-		button[type='roll'] {
-			font-size: 1em;
-			text-align: left; 
-		}
-
-		label {
-			display       : inline-block;
-			font-size     : 0.8em;
-			text-transform: capitalize;
-
-			&:nth-of-type(1) { grid-area: 1 / 3 / 1 / 5;}
-			&:nth-of-type(2) {grid-area: 2 / 1 / 2 / 6;}
-			&:nth-of-type(3) {grid-area: 3 / 1 / 3 / 6;}
-
-			& > input {
-				border-bottom: 1px solid #333;
-				text-align: left;
-				border-radius: 0px;
-				width: 100%;
-			}
-		}
-
-		input[name='attr_skill'] { 
-			border-bottom: 1px solid #333;
-			width: 90%; 
-		}
-
-		textarea{grid-area: 4 / 1 / 4 / 6;}
-
-		div.sheet-row-long {
-			@extend %display-inline-grid;
-			width: 100%;
-			grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
-			margin-top: 1%;
-
-			h3:nth-of-type(1n+2) {
-				text-align: center;;
-			}
-		}
-
-		div.sheet-border-bottom {
-			border-bottom: 1px solid #333;
-		}
-
-		select.sheet-attribute-select {
-			option:nth-of-type(1n+9) { color: #7a2593;	}
-			option:nth-of-type(1n+5) { color: #610b0d; }
-		}
-
-		select.sheet-limit-select  {
-			option:nth-of-type(1n+5) { color: #610b0d; }
-		}
-	}
-
 	/***** SKILLS REPEATING SECTION *****/
 	.sheet-skills-row {
 		select.sheet-skill-select,
