--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -227,6 +227,9 @@ input.sheet-toggle {
   display: inline-grid;
   margin-bottom: 2%; }
 
+.sheet-pc div.sheet-skill-box label > input, .sheet-pc div.sheet-skill-box input[name='attr_skill'] {
+  border-bottom: 1px solid #333; }
+
 /*:+:+:+: MATRIX DEVICE :+:+:+:*/
 div.sheet-matrix-device button[name*='Attack']:hover {
   color: #cc0701; }
@@ -264,7 +267,9 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   border: 3px solid;
   box-shadow: inset 0px 0px 3px 1px #7c7c7c;
   margin-left: -1%;
-  padding-left: 0.5%; }
+  padding-left: 0.5%;
+  /***** REPEATING CONTAINERS *****/
+  /***** SKILLS *****/ }
   .sheet-pc button > h2:hover,
   .sheet-pc button > span:hover,
   .sheet-pc label > button[type='roll']:hover,
@@ -334,6 +339,49 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc input[type='checkbox']:checked + span,
   .sheet-pc input[type='radio']:checked + span {
     color: #610b0d; }
+  .sheet-pc select {
+    height: 1.8em;
+    padding: 0px; }
+  .sheet-pc div.sheet-core-info h2 {
+    margin-right: 1%; }
+  .sheet-pc div.repitem input[type='number'] {
+    text-align: center;
+    width: 3em; }
+  .sheet-pc div.sheet-skill-box button[type='roll'] {
+    font-size: 1em;
+    text-align: left; }
+  .sheet-pc div.sheet-skill-box h2:nth-of-type(1n+2) {
+    text-align: center; }
+  .sheet-pc div.sheet-skill-box label {
+    display: inline-block;
+    font-size: 0.8em;
+    text-transform: capitalize; }
+    .sheet-pc div.sheet-skill-box label[data-i18n-title='rating'] {
+      grid-area: 1 / 2 / 1 / 3; }
+    .sheet-pc div.sheet-skill-box label[data-i18n-title='ratingmodifier'] {
+      grid-area: 1 / 3 / 1 / 6; }
+    .sheet-pc div.sheet-skill-box label[data-i18n-title='specializations'] {
+      grid-area: 3 / 1 / 3 / 6; }
+    .sheet-pc div.sheet-skill-box label[data-i18n-title='notes'],
+    .sheet-pc div.sheet-skill-box label textarea {
+      grid-area: 4 / 1 / 4 / 6; }
+    .sheet-pc div.sheet-skill-box label > input {
+      text-align: left;
+      border-radius: 0px;
+      width: 100%; }
+  .sheet-pc div.sheet-skill-box div.sheet-row-long {
+    grid-column-gap: 1%;
+    grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
+    padding: 1%;
+    width: 100%; }
+    .sheet-pc div.sheet-skill-box div.sheet-row-long h3:nth-of-type(1n+2) {
+      text-align: center; }
+  .sheet-pc div.sheet-skill-box select.sheet-attribute-select option:nth-of-type(1n+9) {
+    color: #7a2593; }
+  .sheet-pc div.sheet-skill-box select.sheet-attribute-select option:nth-of-type(1n+5) {
+    color: #610b0d; }
+  .sheet-pc div.sheet-skill-box select.sheet-limit-select option:nth-of-type(1n+5) {
+    color: #610b0d; }
 
 /***** PC ROWS & COLUMNS SETTINGS *****/
 .sheet-pc-row {
@@ -353,8 +401,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     text-transform: uppercase; }
   .sheet-pc-col h2, .sheet-pc-col h3 {
     display: inline-block;
-    text-transform: capitalize;
-    margin-right: 5px; }
+    text-transform: capitalize; }
   .sheet-pc-col h2 {
     font-size: 0.9em;
     line-height: 25px; }
@@ -595,8 +642,9 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   height: 22px;
   margin-bottom: 4px;
   vertical-align: top;
-  width: 65%;
-  text-align: center; }
+  width: 65%; }
+  .sheet-attr-und .sheet-display {
+    text-align: center; }
 
 .sheet-tiny-span {
   font-size: 0.75em; }
@@ -887,44 +935,6 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   width: 100%; }
 
 /***** SKILLS *****/
-div.sheet-skill-box button[type='roll'] {
-  font-size: 1em;
-  text-align: left; }
-div.sheet-skill-box label {
-  display: inline-block;
-  font-size: 0.8em;
-  text-transform: capitalize; }
-  div.sheet-skill-box label:nth-of-type(1) {
-    grid-area: 1 / 3 / 1 / 5; }
-  div.sheet-skill-box label:nth-of-type(2) {
-    grid-area: 2 / 1 / 2 / 6; }
-  div.sheet-skill-box label:nth-of-type(3) {
-    grid-area: 3 / 1 / 3 / 6; }
-  div.sheet-skill-box label > input {
-    border-bottom: 1px solid #333;
-    text-align: left;
-    border-radius: 0px;
-    width: 100%; }
-div.sheet-skill-box input[name='attr_skill'] {
-  border-bottom: 1px solid #333;
-  width: 90%; }
-div.sheet-skill-box textarea {
-  grid-area: 4 / 1 / 4 / 6; }
-div.sheet-skill-box div.sheet-row-long {
-  width: 100%;
-  grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
-  margin-top: 1%; }
-  div.sheet-skill-box div.sheet-row-long h3:nth-of-type(1n+2) {
-    text-align: center; }
-div.sheet-skill-box div.sheet-border-bottom {
-  border-bottom: 1px solid #333; }
-div.sheet-skill-box select.sheet-attribute-select option:nth-of-type(1n+9) {
-  color: #7a2593; }
-div.sheet-skill-box select.sheet-attribute-select option:nth-of-type(1n+5) {
-  color: #610b0d; }
-div.sheet-skill-box select.sheet-limit-select option:nth-of-type(1n+5) {
-  color: #610b0d; }
-
 /***** SKILLS REPEATING SECTION *****/
 .sheet-skills-row, .sheet-quality-box .sheet-display,
 .sheet-quality-box .sheet-settings div, .sheet-contacts .sheet-display,
@@ -2178,7 +2188,9 @@ input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-attribute .s
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-attribute .sheet-settings.sheet-hide-resonance,
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-magic,
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-resonance, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-textrow, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-rows.sheet-grunt, input[name='attr_display_specialization'][value=''] ~ button[name*='specialization'],
-input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'], input[name='attr_weapon_range'][value='range'] ~ h2[data-i18n='reach'],
+input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'],
+input[name='attr_display_specialization'][value=''] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'],
+input[name='attr_display_specialization'][value=' '] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'], input[name='attr_weapon_range'][value='range'] ~ h2[data-i18n='reach'],
 input[name='attr_weapon_range'][value='range'] ~ label[data-i18n-title='reach'], input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='modes'],
 input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='recoil'],
 input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='ammo'],
@@ -2196,7 +2208,7 @@ input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam']
 .sheet-tab-switch[value='language'] ~ .sheet-skills-lang, .sheet-magic-toggle[value='spells'] ~ .sheet-magic-spells, .sheet-magic-toggle[value='preps'] ~ .sheet-magic-preps, .sheet-magic-toggle[value='rituals'] ~ .sheet-magic-rituals, .sheet-tab-switch[value='quality'] ~ .sheet-quality, .sheet-tab-switch[value='martial'] ~ .sheet-martial, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {
   display: inline; }
 
-.sheet-pc .sheet-tabs, div.sheet-skill-box div.sheet-row-long, .sheet-npc div.sheet-tabs, .sheet-npc div.sheet-mid, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-attribute.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-attribute.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-attribute.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-attribute.sheet-vehicle {
+.sheet-pc .sheet-tabs, .sheet-pc div.sheet-skill-box div.sheet-row-long, .sheet-npc div.sheet-tabs, .sheet-npc div.sheet-mid, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-attribute.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-attribute.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-attribute.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-attribute.sheet-vehicle {
   display: inline-grid; }
 
 .sheet-pictos, .sheet-settings-toggle input[type='checkbox'] + span, .sheet-flag-primary + div > span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .repcontrol .repcontrol_edit:after,
@@ -2228,8 +2240,8 @@ input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-settings {
   text-align: left;
   width: 100%; }
 
-input.sheet-settings-toggle[value='display'] ~ div.sheet-pc div.sheet-display,
-input.sheet-settings-toggle[value='settings'] ~ div.sheet-pc div.sheet-settings {
+input.sheet-settings-toggle[value='display'] ~ div.sheet-display,
+input.sheet-settings-toggle[value='settings'] ~ div.sheet-settings {
   display: inline-block; }
 
 /***** NPC TYPES *****/
