--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -109,6 +109,8 @@ input.sheet-toggle {
 	}
 }
 
+%borderBottom { border-bottom: 1px solid #333; }
+
 @import 'src/scss/_matrixdevice'; 
 
 /******************************************************************************/
@@ -218,6 +220,79 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			&:checked + span {  color: $red; }
 		}
 
+		select {
+			height: 1.8em;
+			padding: 0px;
+		}
+
+		div.sheet-core-info {
+			h2{ margin-right: 1%; }
+		}
+
+
+		/***** REPEATING CONTAINERS *****/
+
+		div.repitem {
+			input[type='number'] {
+				text-align: center;
+				width: 3em;
+			}
+		}
+
+		/***** SKILLS *****/
+		div.sheet-skill-box {
+			button[type='roll'] {
+				font-size: 1em;
+				text-align: left; 
+			}
+
+			h2:nth-of-type(1n+2) { text-align: center; }
+
+			label {
+				display       : inline-block;
+				font-size     : 0.8em;
+				text-transform: capitalize;
+
+				&[data-i18n-title='rating'] { grid-area: 1 / 2 / 1 / 3; }
+				&[data-i18n-title='ratingmodifier'] { grid-area: 1 / 3 / 1 / 6; }
+				&[data-i18n-title='specializations'] { grid-area: 3 / 1 / 3 / 6; }
+
+				&[data-i18n-title='notes'],
+				textarea { 
+					grid-area: 4 / 1 / 4 / 6; 
+				}
+
+				& > input {
+					@extend %borderBottom;
+					text-align: left;
+					border-radius: 0px;
+					width: 100%;
+				}
+			}
+
+			input[name='attr_skill'] { @extend %borderBottom; }
+
+			div.sheet-row-long {
+				@extend %display-inline-grid;
+				grid-column-gap: 1%;
+				grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
+				padding: 1%;
+				width: 100%;
+
+				h3:nth-of-type(1n+2) {
+					text-align: center;;
+				}
+			}
+
+			select.sheet-attribute-select {
+				option:nth-of-type(1n+9) { color: #7a2593;	}
+				option:nth-of-type(1n+5) { color: #610b0d; }
+			}
+
+			select.sheet-limit-select  {
+				option:nth-of-type(1n+5) { color: #610b0d; }
+			}
+		}
 	}
 	@import 'src/scss/_pc'; 
 
